Fix text alignment in pre elements.

--- a/assets/stylesheets/_license.scss
+++ b/assets/stylesheets/_license.scss
@@ -96,6 +96,7 @@
     .license {
       margin-top: 12px;
       margin-bottom: 30px; // Empty line
+      text-align: left;
     }
   }
 
